        can be configured through ZCML (see
        Products/PageTemplates/(configure.zcml, unicodeconflictresolver.py,
        interfaces.py)

      - AccessControl.Role: added new method 
        manage_getUserRolesAndPermissions().
 
      - AccessControl: the form behind the "Security" tab has a new form 
        for user-related reporting of permissions and roles 

    Bugs Fixed

      - Collector #2289: restored compatiblity with PTProfiler

      - No longer opens a zodb connection every time a ProductDispatcher
        is looked up.

      - PageTemplate/ZRPythonExpr.py: expressions represented as unicode string
        caused UnicodeDecodeErrors. 

      - PluginIndexes: Fixed 'parseIndexRequest' for false values. 

      - Collector #2269: fixed broken ZPT FTP support

      - Collector #2261: Acquisition when creating objects via Webdav.

      - Collector #2263: 'field2ulines' did not convert empty string
        correctly.

      - Collector #2191: extended DateTime parser for better support
        to the ISO8601 specification.

      - Reworking of _cached_result in Shared.DC.ZRDB.DA.DA:

        - fixed KeyError reported in Collector #2212

        - fixed two memory leaks that occurred under high load

        - fixed broken cache keys for people using the obscure
          Shared.DC.ZRDB.DA.DA.connection_hook

        - fixed incorrect cache ordering resulting in newer results
          being dumped when the cache became too large.

      - Collector #2237: 'make' doesn't tell you to run 'make inplace'
        before running 'make instance'.

      - Collector #2232: Can't call DTML templates from Page Templates

      - Collector #2198: Zope 3.3 fix breaks Five 1.5 test_getNextUtility

      - Collector #2206: Set PYTHONPATH to include existing PYTHONPATH
        in skel/bin/zopectl.in and skel/bin/runzope.in

      - Collector #2209: ZTUtils module could not be used inside ZPT
