@@ -30,6 +30,7 @@ from Product import ProductFolder
 from version_txt import version_txt
 from cStringIO import StringIO
 from AccessControl import getSecurityManager
+from AccessControl.requestmethod import postonly
 from zExceptions import Redirect
 from Products.PageTemplates.PageTemplateFile import PageTemplateFile
 from cgi import escape
@@ -388,6 +389,7 @@ class ApplicationManager(Folder,CacheManager):
 
     if os.environ.has_key('ZMANAGED'):
         manage_restartable=1
+        @postonly
         def manage_restart(self, URL1):
             """Shut down the application"""
             try:
@@ -403,7 +405,8 @@ class ApplicationManager(Folder,CacheManager):
             <body>Zope is restarting</body></html>
             """ % escape(URL1, 1)
 
-    def manage_shutdown(self):
+    @postonly
+    def manage_shutdown(self, REQUEST=None):
         """Shut down the application"""
         try:
             user = '"%s"' % getSecurityManager().getUser().getUserName()
@@ -418,6 +421,7 @@ class ApplicationManager(Folder,CacheManager):
         <body>Zope is shutting down</body></html>
         """
 
+    @postonly
     def manage_pack(self, days=0, REQUEST=None):
         """Pack the database"""
 
@@ -472,6 +476,7 @@ class ApplicationManager(Folder,CacheManager):
             r.append({'id': v})
         return r
 
+    @postonly
     def manage_saveVersions(self, versions, REQUEST=None):
         "Commit some versions"
         db=self._p_jar.db()
@@ -480,6 +485,7 @@ class ApplicationManager(Folder,CacheManager):
         if REQUEST is not None:
             REQUEST['RESPONSE'].redirect(REQUEST['URL1']+'/manage_main')
 
+    @postonly
     def manage_discardVersions(self, versions, REQUEST=None):
         "Discard some versions"
         db=self._p_jar.db()
