@@ -88,6 +88,14 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #2294: Protected DOS-able ControlPanel methods with the
+        same 'requestmethod' wrapper.
+  
+      - Collector #2294: Protected various security mutators with a new
+        'postonly' decorator.  The decorator limits method publishing to
+        POST requests only, and is a backport from Zope 2.11's requestmethod
+        decorator factory.
+
       - Collector #2289: restored compatiblity with PTProfiler
 
       - No longer opens a zodb connection every time a ProductDispatcher
